reconstruccion completa del servicio Notification y su logica de negocio